# algorand-phala-oracle

./: .gitignore  .gitmodules  Cargo.toml  README.md
oracle/: package.json  pnpm-lock.yaml  tsconfig.json
oracle/contracts/: oracle.algo.ts
oracle/src/: index.ts
zkvm/sp1-guest/: Cargo.toml
zkvm/sp1-guest/src/: main.rs
zkvm/sp1-host/: Cargo.toml  build.rs  sp1_inputs.txt  sp1_proof_response.json
zkvm/sp1-host/src/: main.rs
