[workspace]
members = [
    "zkvm/sp1-guest", "zkvm/sp1-host",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
sp1-zkvm = "5.2.4"
dcap-qvl = { version = "0.3.11", default-features = false, features = ["std", "rustcrypto", "borsh"] }
wincode = "0.3.1"
borsh = "1.6.0"


