[package]
name = "sp1-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sp1-sdk = "5.2.4"
borsh.workspace = true
tokio = "1.49.0"
dcap-qvl = { workspace = true, features = ["report"] }
reqwest = "0.13.1"
hex = "0.4.3"
dstack-sdk-types = "0.1.2"
serde_json = "1.0.149"
axum = "0.8.8"
serde = "1.0.228"
serde_with = { version = "3.16.1", features = ["base64"] }
sp1-verifier = "5.2.4"
dotenv = "0.15.0"

[build-dependencies]
sp1-build = "5.2.4"
